# scalable-gp-state-space

./: .gitattributes  .gitignore  Experiments.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt
code/: config.py  data.py  dense_gpr.py  kalman_rts.py  matern_ssm.py
code/experiments/: fig_equivalence.py  fig_error.py  fig_samples.py  fig_scalability.py
